--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-stage-0": "^6.5.0",
+    "mongoose": "^5.0.15",
     "react": "^15.6.2",
     "react-addons-update": "^15.6.2",
     "react-dom": "^15.6.2",
