--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.226.1",
     "babel-preset-stage-0": "^6.5.0",
     "mongoose": "^5.0.15",
     "react": "^15.6.2",
