--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.226.1",
+    "axios": "^0.18.0",
     "babel-preset-stage-0": "^6.5.0",
     "mongoose": "^5.0.15",
     "react": "^15.6.2",
