--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.226.1",
+    "aws-sdk": "^2.279.1",
     "axios": "^0.18.0",
     "babel-preset-stage-0": "^6.5.0",
-    "mongoose": "^5.0.15",
+    "bootstrap": "^4.1.2",
+    "mongoose": "^5.2.4",
     "react": "^15.6.2",
     "react-addons-update": "^15.6.2",
     "react-dom": "^15.6.2",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.3.1",
+    "reactstrap": "^6.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react-hot-loader": "^4.0.0-beta.14",
+    "css-loader": "^1.0.0",
+    "react-hot-loader": "^4.3.3",
+    "style-loader": "^0.21.0",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
   }
