--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.18.0",
     "babel-preset-stage-0": "^6.5.0",
     "bootstrap": "^4.1.2",
+    "file-loader": "^1.1.11",
+    "image-webpack-loader": "^4.3.1",
     "mongoose": "^5.2.4",
     "react": "^15.6.2",
     "react-addons-update": "^15.6.2",
