--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/webpack-dev-server --hot --host 0.0.0.0"
+    "start": "./node_modules/.bin/webpack-dev-server --hot --public 13.209.26.199"
   },
   "author": "",
   "license": "ISC",
